welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:4: error: type white is not a member of object java.awt.Color
      if (!getCouleurSol():Color.white) {
                                 ^PictureMono1:4: error: value unary_! is not a member of java.awt.Color
      if (!getCouleurSol():Color.white) {
          ^